Fix some scrollbar effects and improve documentation

--- a/betterTable/styles/betterTableFlex.css
+++ b/betterTable/styles/betterTableFlex.css
@@ -20,13 +20,13 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: hidden;
 }
 
 .btf-body {
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 100%;
   flex: 1 auto;
 }
